# incolumepy.curso.flask.comunidadeimpressionadora

./: .replit  example.draw  main.py  pyproject.toml  settings.py
comunidadeimpressionadora/: comunidade.db  forms.py  routes.py
comunidadeimpressionadora/templates/: perfil.html
src/incolumepy/comunidadeimpressionadora/: __init__.py  forms.py  models.py  routes.py
src/incolumepy/comunidadeimpressionadora/templates/: editarperfil.html
