[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]

[tool.poetry]
authors = ["Britodfbr <britodfbr@gmail.com>"]
description = "Aplicação Flask do curso python impressionador"
name = "incolumepy.comunidadeimpressionadora"
version = "0.1.0"
packages=[
    {include = 'incolumepy/comunidadeimpressionadora', from='src'},
]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"
Flask-SQLAlchemy = "^2.5.1"
Flask-Bcrypt = "^0.7.1"
Flask-Login = "^0.5.0"
Flask-WTF = "^0.14.3"
email-validator = "^1.1.2"
wtforms = "^2.3.3"


[tool.poetry.dev-dependencies]
